--- a/src/patternfly/components/Masthead/masthead.scss
+++ b/src/patternfly/components/Masthead/masthead.scss
@@ -16,6 +16,7 @@ $pf-v6-c-masthead--inset-map: build-spacer-map("none", "sm", "md", "lg", "xl", "
   // * Masthead main container holds the toggle and brand
   --#{$masthead}__main--ColumnGap: var(--pf-t--global--spacer--md);
   --#{$masthead}__main--MarginInlineEnd: var(--pf-t--global--spacer--inset--page-chrome);
+  --#{$masthead}--m-docked__main--RowGap: var(--pf-t--global--spacer--gap--group--vertical);
 
   // * Masthead brand
   --#{$masthead}__logo--MaxHeight: #{pf-size-prem(38px)};
@@ -164,6 +165,12 @@ $pf-v6-c-masthead--inset-map: build-spacer-map("none", "sm", "md", "lg", "xl", "
     height: 100%;
     backdrop-filter: var(--#{$masthead}--m-docked--BackdropFilter);
 
+    .#{$masthead}__main {
+      flex-direction: column;
+      align-items: flex-start;
+      row-gap: var(--#{$masthead}--m-docked__main--RowGap);
+    }
+
     .#{$masthead}__content {
       flex-grow: 1;
       flex-direction: column;
@@ -175,6 +182,12 @@ $pf-v6-c-masthead--inset-map: build-spacer-map("none", "sm", "md", "lg", "xl", "
       --pf-v6-c-toolbar--m-vertical--Width: auto;
 
       height: var(--#{$masthead}--m-docked--c-toolbar--Height);
+    }
+
+    @media (min-width: $pf-v6-global--breakpoint--dock--expand) {
+      .#{$masthead}__main {
+        align-items: center;
+      }
     }
   }
 
