--- a/src/patternfly/components/Page/page-dock.hbs
+++ b/src/patternfly/components/Page/page-dock.hbs
@@ -1,6 +1,7 @@
 <div class="{{pfv}}page__dock
   {{setModifiers
     page-dock--IsExpanded='pf-m-expanded'
+    page-dock--IsTextExpanded='pf-m-text-expanded'
     page-dock--modifier=page-dock--modifier
   }}"
   {{#if page-dock--attribute}}
