--- a/src/patternfly/components/MenuToggle/menu-toggle.scss
+++ b/src/patternfly/components/MenuToggle/menu-toggle.scss
@@ -442,7 +442,9 @@
     }
   }
 
+  @at-root .#{$page}__dock.pf-m-text-expanded &,
   &.pf-m-text-expanded {
+    justify-content: flex-start;
     width: 100%;
 
     .#{$menu-toggle}__text,
