fix(): update to use new variable name

--- a/src/patternfly/components/ToggleGroup/toggle-group.scss
+++ b/src/patternfly/components/ToggleGroup/toggle-group.scss
@@ -156,7 +156,7 @@
     --#{$toggle-group}__button--Color: var(--#{$toggle-group}__button--disabled--Color);
     --#{$toggle-group}__button--ZIndex: var(--#{$toggle-group}__button--disabled--ZIndex);
     --#{$toggle-group}__button--before--BorderColor: var(--#{$toggle-group}__button--disabled--before--BorderColor);
-    --#{$toggle-group}__icon--Color: var(--#{$toggle-group}__icon--m-disabled--Color);
+    --#{$toggle-group}__icon--Color: var(--#{$toggle-group}__icon--disabled--Color);
 
     pointer-events: none;
   }
